--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,25 @@
-.mainattributes { border: 15px solid green;
-width: 30%;
-height: 75%;
-display: inline-block;}
+main {
+    border: 15px solid purple;
+    width: 100%;
+    height: 100%;
+}
 
-.attribute {display: block;}
+.mainattributes {
+    border: 15px solid green;
+    width: 30%;
+    height: 75%;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.characterdetails {
+    border: 15px solid red;
+    height: 15%;
+    display: flex;
+}
+
+.characterdetails h1 {
+    margin: auto;
+}
+
+.attribute {}
